修复性能问题

--- a/XXKit/resource/en.lproj/Localizable.strings
+++ b/XXKit/resource/en.lproj/Localizable.strings
@@ -7334,3 +7334,10 @@
 /* 文案正确性测试 */
 "zzzzz"="DJI GO";
 
+/* osmo相机 */
+"cameraSetting"="Camera Setting";
+
+"WhiteBalanceMenu"="White Balance";
+
+"gridMenu"="Grid";
+
