--- a/XXKit/resource/zh-Hans.lproj/Localizable.strings
+++ b/XXKit/resource/zh-Hans.lproj/Localizable.strings
@@ -7400,3 +7400,11 @@
 
 /* 文案正确性测试 */
 "zzzzz"="DJI GO";
+
+/* osmo相机 */
+"cameraSetting"="相机设置";
+
+"WhiteBalanceMenu"="白平衡";
+
+"gridMenu"="网格";
+
